syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

message InstitutionPersistenceStateMessage {
    repeated InstitutionMessage institutions = 1;
}

message InstitutionCreatedMessage {
    InstitutionMessage institution = 1;
}

message InstitutionModifiedMessage {
    InstitutionMessage institution = 1;
}

message InstitutionMessage {
    string id = 1;
    AgencyMessage agency = 2;
    int32 activityYear = 3;
    InstitutionTypeMessage institutionType = 4;
    bool cra = 5;
    repeated ExternalIdMessage externalIds = 6;
    repeated string emailDomains = 7;
    RespondentMessage respondent = 8;
    bool hmdaFilerFlag = 9;
    ParentMessage parent = 10;
    int32 assets = 11;
    int32 otherLenderCode = 12;
    TopHolderMessage topHolder = 13;
}

message ExternalIdMessage {
    string value = 1;
    ExternalIdTypeMessage externalIdType = 2;
}

enum AgencyMessage {
    CFPB = 0;
    FDIC = 1;
    FRS = 2;
    HUD = 3;
    NCUA = 4;
    OCC = 5;
    UNDETERMINED = 6;
}

enum ExternalIdTypeMessage {
    FDIC_CERTO_NO = 0;
    FEDERAL_TAX_ID = 1;
    NCUA_CHARTER_ID = 2;
    OCC_CHARTER_ID = 3;
    RSSD_ID = 4;
    UNDERTERMINED_EXTERNAL_ID = 5;
}

message RespondentMessage {
    ExternalIdMessage externalId = 1;
    string name = 2;
    string state = 3;
    string city = 4;
    string fipsStateNumber = 5;
}

message ParentMessage {
    string respondentId = 1;
    int32 idRssd = 2;
    string name = 3;
    string city = 4;
    string state = 5;
}

message TopHolderMessage {
    int32 idRssd = 1;
    string name = 2;
    string city = 3;
    string state = 4;
    string country = 5;
}

enum InstitutionTypeMessage {
    BANK = 0;
    CREDIT_UNION = 1;
    SAVINGS_AND_LOAN = 2;
    INDEPENDENT_MORTGAGE_COMPANY = 3;
    MBS = 4;
    AFFILIATE = 5;
    UNDETERMINED_INSTITUTION_TYPE = 6;
}